--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.1",
   "scripts": {
     "gulp": "gulp",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "ntl build",
+    "build-deploy": "ntl build && ntl deploy",
+    "build-deploy-redev": "ntl build && ntl deploy && gulp watch"
   },
   "devDependencies": {
     "autoprefixer": "^9.4.3",
